# PyMeshInterview

./: CMakeLists.txt  Doxyfile  ionq.ipynb
cpp/: CMakeLists.txt
cpp/io/: CMakeLists.txt  logger.cc
cpp/io/cmake/: IOConfig.cmake
cpp/io/include/: logger.h
cpp/math/: CMakeLists.txt  CMakeLists.txt.bak  diffoperators.cc  poisson.cc
cpp/math/cmake/: MathConfig.cmake
cpp/math/include/: diffoperators.h  poisson.h
cpp/mesh/: CMakeLists.txt  elements.cc  mesh.cc  meshing.cc  segment.cc  system.cc
cpp/mesh/cmake/: MeshConfig.cmake
cpp/mesh/include/: attribute.h  attribute.h.bak  elements.h  expression.hh  expression.hh.bak  hash.hh  mesh.h  quantity.h  segment.h  simplexcontainer.hh  system.h  types.h
cpp/triangle/: CMakeLists.txt
cpp/triangle/cmake/: TriangleConfig.cmake
py/mesh/: CMakeLists.txt  gen_segment.py  pymesh.cc
py/mesh/cmake/: PyMeshConfig.cmake
